fix(geographic-exposure,fixed-income-sector): return null buckets and emit warnings for unknown securities When a holding's data is absent or empty in Security Master, the service now emits a per-holding warning and returns NULL sector/region buckets instead of silently returning zeros with no warnings.
- AbstractGeographicExposureService.emptyRegionMap(): null instead of zero for every bucket, so both equity and fixed-income geographic exposure services return null on the empty-data path
- FixedIncomeBondSectorService.fetchExposures(): replaced AllocationMappingUtils.mapTypedAllocations (skips holdings absent from rawData) with the EquitySectorService pattern — iterates all non-cash/non-GIC holdings from the command and emits MISSING_FIXED_INCOME_BOND_SECTOR for each whose data is missing or empty in the fetcher response
- Tests: renamed shouldReturnZeroMap_* → shouldReturnNullBuckets_* and added assertNullExposure() helper; added shouldEmitWarning_whenSecurityIsUnknown to confirm the previously-untested absent-from-rawData case
- Remove unused fetchExposuresInternal method from AbstractGeographicExposureService (and the now-orphaned ExposureDataHolder import)

ref: TMI-488